--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/c.png
+    - assets/flutter.png
+    - assets/go.png
+    - assets/haskell.png
+    - assets/java.png
     - assets/profile.jpg
+    - assets/python.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
