--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/profile.jpg
+    - assets/profile.png
     - assets/highway_wireframe_transparent_white.png
   #   - images/a_dot_ham.jpeg
 
